# alttext-helper

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/alttext-generation/: alttextgeneration.py  batch.py  clientsettings.yaml  config.py  utils.py
